test/libsolidity/syntaxTests/parsing/inline_array_empty_cells_check_without_lvalue.sol
contract c {
	uint[] a;
	function f() returns (uint, uint) {
		return ([3, ,4][0]);
	}
}
// ----
// ParserError: (75-75): Expected expression (inline array elements cannot be omitted).
